--- a/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
+++ b/XOSkinWebApp/Views/Checkout/OrderConfirmation.cshtml
@@ -33,7 +33,7 @@
       </div>
       <div class="form-group">
         <label class="control-label">State</label>
-        <input asp-for="BillingState" class="form-control readonly" />
+        <input asp-for="BillingState" class="form-control" readonly" />
       </div>
       <div class="form-group">
         <label class="control-label">Country</label>
